# data-science-candidate-takehome

./: .gitignore  README.md  pyproject.toml  test_data.csv  train_data.csv
src/data_science_candidate_takehome/: api.py  data.csv  generate_data.py
