[project]
name = "data-science-candidate-takehome"
version = "0.1.0"
description = ""
authors = [
    {name = "tayler-blake",email = "tayler@postpilot.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.2",
    "pandas>=2.3.1",
]

[tool.poetry]
packages = [{include = "data_science_candidate_takehome", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
